refactor: externalize security configuration to environment variables
- Move JWT secret key and expiration time from hardcoded values to environment variables
- Move CORS allowed origins from hardcoded value to environment variable with support for multiple origins
- Update .env.example with new security configuration section
- Enhance SecurityConfig to parse comma-separated CORS origins
- Improve application security by centralizing sensitive configuration